[gd_scene load_steps=2 format=3 uid="uid://cwwqbqdv7bfhk"]

[ext_resource type="Script" uid="uid://b2ab01tfxvfol" path="res://_reusable/ui_scenes/scripts/audio_slider.gd" id="1_lpeyv"]

[node name="Audio_Slider" type="Control"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lpeyv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SliderTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Audio_Slider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
value = 50.0
rounded = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 100

[node name="min" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "min"

[node name="current_value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "NO_CURRENT_VALUE"

[node name="max" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "max"

[connection signal="drag_ended" from="MarginContainer/VBoxContainer/Audio_Slider" to="." method="_on_audio_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Audio_Slider" to="." method="_on_audio_slider_value_changed"]
